[fix] Debug overflow: hidden container bugs
*Styles*
-Remove the hero-container style from the _main-page.scss;
-Remove the overflow:visible style from the header__container class in _header.scss;
-Remove the container class style - overflow:hidden in the _base.scss;
-Add a new class with a modifier  - container--overflow-is-hidden in the _base.scss.
*HTML markup*
-Remove the hero-container class from the _main-page.html;
-Connect the new class with a modifier (container--overflow-is-hidden) to sections with animations (3D SCANNING PROCESS, 3D PRINTING EXAMPLES, 3D MODELS).

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -36,7 +36,9 @@ img {
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
+  &--overflow-is-hidden {
+    overflow: hidden;
+  }
   @media screen and (min-width: 320px) {
     min-width: 320px;
     padding-left: 20px;
