--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,7 +4,6 @@
   padding-bottom: 35px;
   min-width: 320px;
   align-items: center;
-  overflow: visible;
 
   @media screen and (min-width: 768px) {
     width: 768px;
