--- a/src/sass/pages/_main-page.scss
+++ b/src/sass/pages/_main-page.scss
@@ -1,8 +1,4 @@
 // HERO
-.hero__container {
-  overflow: visible;
-}
-
 .main__page-title {
   width: 280px;
   margin-right: auto;
